--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,38 +1,37 @@
 .header {
   height: 295px;
   background-color: #ced4da;
-  background-image: linear-gradient(#087990, #055160);
+   background: linear-gradient(to right, #087990, #055160);
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  position: relative;
 }
 
 .header__container {
   display: flex;
   flex-direction: column;
   align-items: center;
-      position: relative; 
+  gap: 4px; 
 }
 
 .header__title {
-  width: 435px;
-  height: 87px;
+  max-width: 435px;
   margin-top: 68px;
 }
+
 .header__description {
-  width: 233px;
-  height: 36px;
-  margin-top: 4px;
+  max-width: 233px; 
 }
+
 .header__search-input {
   width: 820px;
   height: 64px;
   border-radius: 4px;
   border: 1px solid var(--stroke-input, #ced4da);
   background: var(--gray-white, #fff);
-}
-
-.header__search-input {
-    position: absolute;
-    bottom: -70%;
-    left: 50%;
-    transform: translateX(-50%); 
+ position: absolute;
+ bottom: 0;
+  transform: translate(-50%, -50%);
 
 }
