--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,4 @@
 @import url(../style/reset.css);
+@import url(../style/main.css);
 @import url(../style/header.css);
 @import url(../style/fonts.css);
