--- a/src/style/header.css
+++ b/src/style/header.css
@@ -30,6 +30,9 @@
   border-radius: 4px;
   border: 1px solid var(--stroke-input, #ced4da);
   background: var(--gray-white, #fff);
+  position: absolute;
   bottom: 0;
-  transform: translate(-50%, -50%);
+  left: 50%;  
+  transform: translate(-50%, 50%);
 }
+
