--- a/src/style/main.css
+++ b/src/style/main.css
@@ -23,13 +23,16 @@
   font-style: normal;
   font-weight: 700;
   padding-top: 18px;
+  text-align: center;
+  padding-top: 18px;
 }
-
 .block-symbol {
   color: var(--body-text-base-color, #68717a);
   font-family: Inter;
   font-size: 48px;
   font-weight: 400;
+  text-align: center;
+  padding-top: 24px;
 }
 
 .block-keywords {
@@ -38,4 +41,5 @@
   font-family: Inter;
   font-size: 12px;
   font-weight: 400;
+  padding-top: 12px;
 }
